bk_ida/gccida/c3/pop_init_level
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pop_init_level/src/c-typeck.c:5939:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *inited; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pop_init_level/src/c-typeck.c:5943:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pop_init_level/src/c-typeck.c:5953:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v17; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pop_init_level/src/c-typeck.c:5961:6: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
v1 = constructor_stack_0; 
     ^~~~~~~~~~~~~~~~~~~
     constructor_stack
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pop_init_level/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pop_init_level/src/c-typeck.c:5968:6: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
v1 = constructor_stack_0; 
     ^~~~~~~~~~~~~~~~~~~
     constructor_stack
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pop_init_level/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pop_init_level/src/c-typeck.c:5970:6: error: use of undeclared identifier 'constructor_range_stack_0'; did you mean 'constructor_range_stack'?
if ( constructor_range_stack_0 ) 
     ^~~~~~~~~~~~~~~~~~~~~~~~~
     constructor_range_stack
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pop_init_level/src/c-typeck.c:5036:33: note: 'constructor_range_stack' declared here
struct constructor_range_stack *constructor_range_stack;
                                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pop_init_level/src/c-typeck.c:6011:7: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
v10 = spelling_0; 
      ^~~~~~~~~~
      spelling
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pop_init_level/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pop_init_level/src/c-typeck.c:6012:37: error: use of undeclared identifier 'spelling_0'
v11 = ( unsigned __int64)( ( char *)spelling_0 - ( char *)spelling_base) >> 4; 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pop_init_level/src/c-typeck.c:6023:1: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
spelling_0 = v10; 
^~~~~~~~~~
spelling
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pop_init_level/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pop_init_level/src/c-typeck.c:6027:1: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
spelling_0 = v10 + 1; 
^~~~~~~~~~
spelling
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pop_init_level/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pop_init_level/src/c-typeck.c:6029:1: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
spelling_0 = &spelling_base[constructor_depth]; 
^~~~~~~~~~
spelling
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pop_init_level/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pop_init_level/src/c-typeck.c:6126:1: error: use of undeclared identifier 'constructor_range_stack_0'; did you mean 'constructor_range_stack'?
constructor_range_stack_0 = v1->range_stack; 
^~~~~~~~~~~~~~~~~~~~~~~~~
constructor_range_stack
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pop_init_level/src/c-typeck.c:5036:33: note: 'constructor_range_stack' declared here
struct constructor_range_stack *constructor_range_stack;
                                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pop_init_level/src/c-typeck.c:6127:1: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
spelling_0 = &spelling_base[depth]; 
^~~~~~~~~~
spelling
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pop_init_level/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pop_init_level/src/c-typeck.c:6128:1: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
constructor_stack_0 = v1->next; 
^~~~~~~~~~~~~~~~~~~
constructor_stack
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pop_init_level/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pop_init_level/src/c-typeck.c:6132:6: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
if ( constructor_stack_0 ) 
     ^~~~~~~~~~~~~~~~~~~
     constructor_stack
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pop_init_level/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
15 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pop_init_level/src/obj/c-typeck.o] Error 1
